--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.about_title {
+  color: blue;
+}
+.work_title {
+  color: green;
+}
+.contact_title {
+  color: red;
+}
+
+.home_title {
+  color: gray;
+}
