--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,7 @@
-<h1>About me</h1>
-
 <a href="/">Home</a>
 <a href="/about">About</a>
+<a href="/work">Work</a>
 <a href="/contact">Contact</a>
+
+
+<h1 class="about_title">About me</h1>
