--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -1,5 +1,7 @@
-<h1>Home#work</h1>
-
 <a href="/">Home</a>
 <a href="/about">About</a>
+<a href="/work">Work</a>
 <a href="/contact">Contact</a>
+
+
+<h1 class="work_title">work</h1>
