--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,5 +1,7 @@
-<h1>Home#contact</h1>
-
 <a href="/">Home</a>
 <a href="/about">About</a>
+<a href="/work">Work</a>
 <a href="/contact">Contact</a>
+
+
+<h1 class="contact_title">contact</h1>
